# Staffing_Optimizer

./: .gitignore  README.md  RUNNING.md  design.py  pyproject.toml  solve.py
app/: dashboard.py
examples/: warehouse_5dept.flow  warehouse_5dept.yaml
staffing_optimizer/: __init__.py  diagnostics.py  diagram.py  dsl.py  dynamics.py  equilibrium.py  gaps.py  io_scenario.py  network.py  report.py  skus.py
tests/: test_diagnostics.py  test_diagram.py  test_dsl.py  test_dynamics.py  test_equilibrium.py  test_gaps.py  test_network.py  test_skus.py  test_webapp.py
webapp/: __init__.py  __main__.py  adapters.py  api.py  app.py  examples_lib.py  store.py
webapp/examples/: 01-linear-warehouse.json  02-rework-loop.json  03-branch-merge.json  04-under-staffed.json  05-minimal-two-step.json
webapp/static/css/: app.css
webapp/static/js/: analyze.js  builder.js  common.js  designs.js  examples.js  simulate.js
webapp/templates/: analyze.html  base.html  builder.html  designs.html  examples.html  help.html  simulate.html
