[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "staffing-optimizer"
version = "0.1.0"
description = "Warehouse staffing equilibrium optimizer: basis vectors and makespan gaps for a network of departments that send work to each other."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "jinja2>=3.1", "python-multipart>=0.0.9"]
app = ["streamlit>=1.30", "altair>=5.0", "pandas>=2.0"]  # legacy Streamlit dashboard (deprecated)
viz = ["matplotlib>=3.7", "networkx>=3.0"]
dev = ["pytest>=7.0", "ruff>=0.1", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["staffing_optimizer*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
